# eagle-eye

./: README.md
Admin/: Admin.sqlite3  README.md  manage.py  requirements.txt
Admin/app/: __init__.py  admin.py  middleware.py  models.py  urls.py
Admin/app/templates/app/: base_site.html  message.html  sidebar.html  top_navigation.html  web_behavior.html  web_control.html  web_control_handle.html  web_index.html  web_login.html  web_stream.html  web_stream_play.html
Admin/app/utils/: Analyzer.py  Captcha.py  DjangoSql.py  OSInfo.py  Utils.py  ZLMediaKit.py
Admin/app/views/: ViewsBase.py  api.py  web.py
Admin/framework/: settings.py  urls.py  wsgi.py
Admin/static/lib/: jquery-toast.html
Admin/static/lib/message/: message.css
Algorithm/: Algorithm.py  AlgorithmApiServer.py  README.md  requirements.txt  test_AlgorithmApiServer_image.py  test_AlgorithmApiServer_video.py
Algorithm/lib/: OpenVinoSSDLiteDetector.py  OpenVinoYoloV5Detector.py
Algorithm/weights/yolov5m_openvino_model/: yolov5m.mapping
Algorithm/weights/yolov5n-7_openvino_model/: yolov5n-7.mapping
Algorithm/weights/yolov5n_openvino_model/: yolov5n.yaml
Analyzer/: README.md  config.json  test.py
Analyzer/Analyzer_v2/Core/: Analyzer.cpp  AvPullStream.h  AvPushStream.cpp  Control.h  ControlExecutor.cpp  ControlExecutor.h  GenerateAlarm.h  GenerateVideo.cpp  Scheduler.h  Server.cpp
Analyzer_v2/: CMakeLists.txt  main.cpp
Analyzer_v2/Core/: Analyzer.h  AvPullStream.cpp  AvPushStream.h  Config.cpp  Config.h  GenerateAlarm.cpp  GenerateVideo.h  Scheduler.cpp
(+4 files in other folders)
